--- a/src/app/pages/admin/add-question/add-question.component.html
+++ b/src/app/pages/admin/add-question/add-question.component.html
@@ -19,8 +19,8 @@
                         </mat-form-field>
 
                         <!-- app.component.html -->
-<!-- 
-                        <ckeditor 
+
+                        <!-- <ckeditor 
                         [editor]="Editor" 
                         data="<p>Write your question here</p>"
                         name="content"
