--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row mt20">
             <div class="col-md-6 offset-md-3">
-                <mat-card>
+                <mat-card class="loginCard">
                 <div class="container text-center">
-                    <img src="../../../assets/logo.png" width="200" height="200" alt="">
+                    <img src="../../../assets/p10-logo.png" class="logo" width="200" height="200" alt="">
                 </div>
                 <h1 class="text-center mr20 ml20">Login</h1>
                 <form class="mr20 ml20" (ngSubmit)="formSubmit()">
@@ -29,13 +29,20 @@
                       </mat-form-field>
 
                       <div class="container text-center mb20">
-                        <button  mat-raised-button type="submit" color="primary">Login</button>
+                        <button  mat-raised-button type="submit" style="background-color: rgb(77, 75, 75); color: aliceblue;">Login</button>
                         
                       </div>
 
                 </form>
             </mat-card>
             </div>
+            <!-- <iframe src="https://repl.it/@gaganasri-19/C?lite=true"  width="200%" height="500%" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals" ></iframe> -->
+            <!-- <iframe src="https://repl.it/@gaganasri-19/Cpp?lite=true"  width="100%" height="80%" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals" ></iframe>
+            <iframe src="https://repl.it/@gaganasri-19/Java?lite=true"  width="100%" height="80%" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals" ></iframe>
+            <iframe src="https://repl.it/@gaganasri-19/Python?lite=true"  width="100%" height="80%" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals" ></iframe>
+            <iframe src="https://trinket.io/embed/python3/e0703adc15" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen ></iframe> -->
         </div>
+
     </div>
+    
 </div>
