--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -2,9 +2,9 @@
     <div class="container">
         <div class="row mt20">
             <div class="col-md-6 offset-md-3">
-              <mat-card>
+              <mat-card class="registerCard">
                 <div class="container text-center">
-                    <img src="../../../assets/logo.png" width="200" height="200" alt="">
+                    <img src="../../../assets/p10-logo.png" width="200" height="200" alt="">
                 </div>
                 <h1 class="text-center">Register Here</h1>
 
@@ -65,7 +65,7 @@
                       </mat-form-field> -->
 
                       <div class="container text-center mb20">
-                        <button  mat-raised-button type="submit" color="primary">Register</button>
+                        <button  mat-raised-button type="submit" style="background-color: rgb(77, 75, 75); color: aliceblue;">Register</button>
                       </div>
                 </form>
            
