--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -35,8 +35,19 @@
             </div>
         </div>
     </mat-card-content>
-    <mat-card-actions class="m">
+    <!-- <mat-card-actions class="m">
         <button mat-raised-button color="primary">Update</button>
         <button class="ml10"mat-raised-button color="primary">Share</button>
-    </mat-card-actions>
+    </mat-card-actions> -->
 </mat-card>
+
+<!-- C editor -->
+<!-- <iframe style='max-width:100%; border: none; height: 375px; width: 700px;' height=375 width=700 allowfullscreen referrerpolicy="unsafe-url" sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation allow-popups-to-escape-sandbox" src="https://www.interviewbit.com/embed/snippet/85399de98f8907398434"></iframe> -->
+<!-- Cpp editor -->
+<!-- <iframe style='max-width:100%; border: none; height: 375px; width: 700px;' height=375 width=700 allowfullscreen referrerpolicy="unsafe-url" sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation allow-popups-to-escape-sandbox" src="https://www.interviewbit.com/embed/snippet/6e73defe42c7e33ae4ba"></iframe> -->
+<!-- java editor -->
+<!-- <iframe style='max-width:100%; border: none; height: 375px; width: 700px;' height=375 width=700 allowfullscreen referrerpolicy="unsafe-url" sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation allow-popups-to-escape-sandbox" src="https://www.interviewbit.com/embed/snippet/50984946a751994cd1da"></iframe> -->
+<!-- Py editor -->
+<!-- <iframe style='max-width:100%; border: none; height: 375px; width: 700px;' height=375 width=700 allowfullscreen referrerpolicy="unsafe-url" sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation allow-popups-to-escape-sandbox" src="https://www.interviewbit.com/embed/snippet/a284b05774e528f50a11"></iframe> -->
+
+
