--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; background: #E3F2FD;}
+html, body { height: 100%; background: linear-gradient(rgba(255,255,255,.3), rgba(255,255,255,.3)), url("assets/loginBack.jpg");  
+    -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .text-center{ text-align: center;}
 
 .ml20{
     margin-left:20px !important;
+}
+
+
+.mt50{
+    margin-top:50px !important;
 }
 .mr20{
     margin-right:20px !important;
@@ -41,6 +50,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mr40{
     margin-right:40px !important;
 }
+
+.mr70{
+    margin-right:70px !important;
+}
+
+
 
 .m{
     margin-left: 360px;
